--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -8,17 +8,36 @@
 
 :root {
   --darkest: #2f4454;
-  --dark: #2e151b;
   --pink: #da7b93;
-  --lightjade: #376e6f;
-  --darkjade: #1c3334;
   --white: white;
   --font-style: "Exo", sans-serif, "Kanit", sans-serif;
 }
 
-/* h2 {
-    border-right: 3px solid red;
-} */
+body {
+  font-family: var(--font-style);
+  line-height: 1.5;
+}
+
+
+h1 {
+  font-size: 300%;
+  padding: 0.5rem;
+}
+
+h2 {
+  font-size: 250%;
+  color: var(--darkest);
+  border-right: 3px solid var(--darkest);
+}
+
+section {
+  padding: 0.5rem;
+}
+
+p {
+  padding-top: 0.5rem;
+}
+
 
 /* Navigation bars style */
 .navbar {
@@ -26,9 +45,7 @@
   justify-content: center;
   align-items: center;
   font-family: var(--font-style);
-  text-decoration: underline;
   background-color: rgba(218, 123, 147, 0.5);
-  position: sticky;
   top: 0;
   z-index: 100;
 }
@@ -46,11 +63,11 @@
 }
 
 .navbar ul li a {
-  text-decoration: none;
   color: var(--white);
   padding: 10px 30px;
   transition: all 0.7s ease;
 }
+
 .navbar ul li a:hover {
   background-color: var(--white);
   color: var(--darkest);
@@ -87,106 +104,93 @@
   top: 20%;
   left: 10%;
 }
-.heading {
-  font-family: var(--font-style);
-  font-size: 300%;
-  margin: 30px;
-  text-align: center;
-}
 
 /* About section style */
 #about {
   font-family: var(--font-style);
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  background-color: var(--darkest);
-  color: var(--white);
-  /* padding: 10px; */
-}
-
-#avatar {
-  display: flex;
+  background-color: rgba(218, 123, 147, 0.2);
+  color: var(--darkest);
 }
 
 #me {
-  width: 580px;
-  height: 410px;
+  width: 50%;
 }
 
 #intro {
   display: flex;
-  flex-direction: column;
-  text-align: justify;
-  padding: 20px;
+  width: 50%;
+  padding: 10px;
 }
 
-#intro h2 {
-  font-size: 200%;
-  margin-bottom: 20px;
+.heading {
+  padding-right: 0.5rem;
+  width: 15%;
+  text-align: center;
+}
+
+.contents {
+  width: 75%;
+  display: flex;
+  padding: 20px;
+  color: var(--darkest);
+  justify-content: space-evenly;
 }
 
 #intro p {
   font-size: x-large;
-  line-height: 1.5;
 }
 
 /* work section style */
-
 #work {
   display: flex;
-  flex-direction: column;
+  background-color: rgba(218, 123, 147, 0.2);
+  color: var(--darkest);
+  font-family: var(--font-style);
+}
+.card-container {
+  display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  background-color: rgba(47, 68, 84, 0.9);
-  color: var(--white);
+  max-width: 1200px;
 }
 
 .card {
-  display: flex;
+  width: 75%;
   position: relative;
-  color: var(--white);
+  display: inline-block;
+  color: var(--darkest);
   font-family: var(--font-style);
+  width: 50%;
+  padding: 10px;
+}
 
-  /* text-align: center; */
-  /* border: solid var(--darkjade) 3px; */
-  /* padding: 5px; */
+.card:first-child {
+  width: 100%;
 }
 
 .card img {
   border: 3px solid var(--pink);
-  width: 360px;
-  height: 240px;
-  margin: 10px;
+  width: 100%;
   opacity: 0.8;
 }
 
 .card img:hover {
-  border-color: #66afe9;
+  border-color: var(--darkest);
   outline: 0;
-  -webkit-box-shadow: inset 5px rgba(0, 0, 0, 0.075),0 0 8px rgba(47, 68, 84, 0.5);
+  -webkit-box-shadow: inset 5px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(47, 68, 84, 0.5);
   box-shadow: inset 5px rgba(0, 0, 0, 0.075), 0 0 8px rgba(47, 68, 84, 0.5);
   opacity: 1;
 }
 
-#first-project {
-  justify-self: stretch;
-  /* position: relative;
-    width: 75%;
-    height: 50%; */
-}
-
 .card-title {
   position: absolute;
-  box-sizing: border-box;
-  display: block;
-  border: 5px solid var(--pink);
-  bottom: 0px;
-  left: 0px;
+  border: 3px solid var(--pink);
+  bottom: 20px;
   padding: 10px;
-  margin: 10px;
   background-color: var(--darkest);
   opacity: 0.8;
+  color: var(--white);
 }
 
 .card-title p {
@@ -196,33 +200,51 @@
 /* Contact section style */
 #contact {
   display: flex;
-  justify-content: flex-start;
   text-align: center;
-  background-color: rgba(47, 68, 84, 0.8);
-  color: var(--white);
-  /* flex-direction: column; */
-}
-
-h6 {
-  text-decoration: underline;
-  border: var(--darkest);
-  border-width: medium;
+  background-color: rgba(218, 123, 147, 0.2);
 }
 
 /* Resume Section Style */
 #resume {
   display: flex;
-  justify-content: flex-start;
-  background-color: rgba(47, 68, 84, 0.7);
-  color: var(--white);
+  background-color: rgba(218, 123, 147, 0.2);
 }
 
 /* footer section style */
 footer {
   display: block;
-  /* flex-direction: column; */
   justify-content: center;
   font-family: var(--font-style);
   background-color: rgba(218, 123, 147, 0.8);
   text-align: center;
+}
+
+@media screen and (max-width: 800px) {
+  section {
+    display: flex;
+  }
+
+  h1 {
+    font-size: 200%;
+  }
+
+  h2 {
+    font-size: 150%;
+    border-bottom: 3px solid var(--darkest);
+  }
+
+  .heading {
+    padding-bottom: 0.8rem;
+    /* text-align: center; */
+  }
+
+  .navbar ul li {
+    font-size: 120%;
+  }
+ 
+  #avatar {
+    flex-direction: column;
+  }
+
+  
 }
