--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -18,7 +18,6 @@ body {
   line-height: 1.5;
 }
 
-
 h1 {
   font-size: 300%;
   padding: 0.5rem;
@@ -37,7 +36,6 @@ section {
 p {
   padding-top: 0.5rem;
 }
-
 
 /* Navigation bars style */
 .navbar {
@@ -204,6 +202,11 @@ p {
   background-color: rgba(218, 123, 147, 0.2);
 }
 
+#contact i a {
+  font-family: var(--font-style);
+  font-weight: 900;
+}
+
 /* Resume Section Style */
 #resume {
   display: flex;
@@ -219,20 +222,19 @@ footer {
   text-align: center;
 }
 
+a:visited {
+  color: #da7b93;
+}
+
 @media screen and (max-width: 800px) {
   section {
     display: flex;
   }
 
-  h1 {
-    font-size: 150%;
-  }
-
   h2 {
     width: 100%;
-    font-size: 100%;
     display: block;
-    border-right: 3px solid var(--darkest);
+    border-right: none;
   }
 
   .heading {
@@ -241,12 +243,11 @@ footer {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
   }
-  }
 
   .navbar ul li {
     font-size: 120%;
   }
- 
+
   #avatar {
     flex-direction: column;
   }
@@ -254,7 +255,47 @@ footer {
   #me {
     width: 100%;
   }
-  
+
   #intro {
     width: 100%;
   }
+
+  #contact .contents {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  body {
+    width: 100%;
+  }
+
+  .heading {
+    padding-right: 0;
+    width: auto;
+    margin-block-end: 0;
+    margin-block-start: 0%;
+  }
+
+  .heading h2 {
+    border-right: none;
+    width: auto;
+  }
+  .navbar {
+    flex-wrap: wrap;
+  }
+
+  #contact {
+    display: block;
+    text-align: center;
+  }
+
+  .contents {
+    width: 100%;
+  }
+}
+
+/* #contact {
+  display: block;
+  text-align: center;
+}
